--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "prefix": "!",
-  "token": "ODcxODY3NTgwNDg1MzU3NjM5.YQhj9Q.1kQJq0yMTdSROGosu0Ml5ico-gw",
-  "ytapi" : "AIzaSyCynQP2QScdiGQ21sLDshqxNO881y1DG20"
+  "token": "token",
+  "ytapi" : "ytapi"
 }
