--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
+    "cheerio": "^1.0.0-rc.10",
     "discord.js": "^12.5.3",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.2",
+    "node-fetch": "^3.1.0",
     "yt-playlists": "^1.0.1",
     "yt-search": "^2.10.2",
     "ytdl-core": "^4.9.1"
